@@ -1,8 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-
-        - Added 'jobs' argument for 'dzil test' for parallel testing
+        - Added 'jobs' argument for 'dzil test' for parallel testing (thanks,
+          David Golden!)
+        - add default_jobs attribute to TestRunner role
 
 5.013     2014-02-08 17:08:16-05:00 America/New_York
         - META.json is now a UTF-8 file, rather than ASCII
